@@ -5,7 +5,6 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.boot.test.context.SpringBootTest;
 
 import java.util.Arrays;
 import java.util.List;
@@ -14,7 +13,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-@SpringBootTest
 public class ServicoEstoqueTest {
 
     @Mock
@@ -24,13 +22,13 @@ public class ServicoEstoqueTest {
     private ServicoEstoque servicoEstoque;
 
     @Test
-    public void whenTodosProdutos_thenReturnAllProdutos() {
+    public void whenTodosProdutos_thenReturnTodosProdutos() {
         // Given
         Produto produto = new Produto();
         produto.setDescricao("Churrasqueira Controle Remoto");
         produto.setPrecoUnitario(1000.0);
 
-        when(produtosRepository.findAll()).thenReturn(Arrays.asList(produto));
+        when(produtosRepository.findAll()).thenReturn(List.of(produto));
 
         // When
         List<Produto> foundProdutos = servicoEstoque.todosProdutos();
@@ -40,13 +38,13 @@ public class ServicoEstoqueTest {
     }
 
     @Test
-    public void whenProdutosDisponiveis_thenReturnAvailableProdutos() {
+    public void whenProdutosDisponiveis_thenReturnProdutosDisponiveis() {
         // Given
         Produto produto = new Produto();
         produto.setDescricao("PolyStation 5");
         produto.setPrecoUnitario(50.0);
 
-        when(produtosRepository.findProdutosDisponiveis()).thenReturn(Arrays.asList(produto));
+        when(produtosRepository.findProdutosDisponiveis()).thenReturn(List.of(produto));
 
         // When
         List<Produto> foundProdutos = servicoEstoque.produtosDisponiveis();
